--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Academias Celer - Educación de Calidad</title>
+    <title>Academias Celer - Acelera tu preparación, conquista tu futuro</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
